/*
Copyright 2025 The Dapr Authors
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package dapr.proto.runtime.v1;

option csharp_namespace = "Dapr.Client.Autogen.Grpc.v1";
option java_outer_classname = "DaprProtos";
option java_package = "io.dapr.v1";
option go_package = "github.com/dapr/dapr/pkg/proto/runtime/v1;runtime";

// GetMetadataRequest is the message for the GetMetadata request.
message GetMetadataRequest {
  // Empty
}

// GetMetadataResponse is a message that is returned on GetMetadata rpc call.
message GetMetadataResponse {
  string id = 1;
  // Deprecated alias for actor_runtime.active_actors.
  repeated ActiveActorsCount active_actors_count = 2 [json_name = "actors", deprecated = true];
  repeated RegisteredComponents registered_components = 3 [json_name = "components"];
  map<string, string> extended_metadata = 4 [json_name = "extended"];
  repeated PubsubSubscription subscriptions = 5 [json_name = "subscriptions"];
  repeated MetadataHTTPEndpoint http_endpoints = 6 [json_name = "httpEndpoints"];
  AppConnectionProperties app_connection_properties = 7 [json_name = "appConnectionProperties"];
  string runtime_version = 8 [json_name = "runtimeVersion"];
  repeated string enabled_features = 9 [json_name = "enabledFeatures"];
  ActorRuntime actor_runtime = 10 [json_name = "actorRuntime"];
  optional MetadataScheduler scheduler = 11 [json_name = "scheduler"];
  optional MetadataWorkflows workflows = 12 [json_name = "workflows"];
}

message MetadataWorkflows {
  int32 connected_workers = 1 [json_name = "connectedWorkers"];
}

// MetadataScheduler is a message that contains the list of addresses of the
// scheduler connections.
message MetadataScheduler {
  // connected_addresses the list of addresses of the scheduler connections.
  repeated string connected_addresses = 1;
}

message ActorRuntime {
  enum ActorRuntimeStatus {
    // Indicates that the actor runtime is still being initialized.
    INITIALIZING = 0;
    // Indicates that the actor runtime is disabled.
    // This normally happens when Dapr is started without "placement-host-address"
    DISABLED = 1;
    // Indicates the actor runtime is running, either as an actor host or client.
    RUNNING = 2;
  }

  // Contains an enum indicating whether the actor runtime has been initialized.
  ActorRuntimeStatus runtime_status = 1 [json_name = "runtimeStatus"];
  // Count of active actors per type.
  repeated ActiveActorsCount active_actors = 2 [json_name = "activeActors"];
  // Indicates whether the actor runtime is ready to host actors.
  bool host_ready = 3 [json_name = "hostReady"];
  // Custom message from the placement provider.
  string placement = 4 [json_name = "placement"];
}

message ActiveActorsCount {
  string type = 1;
  int32 count = 2;
}

message RegisteredComponents {
  string name = 1;
  string type = 2;
  string version = 3;
  repeated string capabilities = 4;
}

message MetadataHTTPEndpoint {
  string name = 1 [json_name = "name"];
}

message AppConnectionProperties {
  int32 port = 1;
  string protocol = 2;
  string channel_address = 3 [json_name = "channelAddress"];
  int32 max_concurrency = 4 [json_name = "maxConcurrency"];
  AppConnectionHealthProperties health = 5;
}

message AppConnectionHealthProperties {
  string health_check_path = 1 [json_name = "healthCheckPath"];
  string health_probe_interval = 2 [json_name = "healthProbeInterval"];
  string health_probe_timeout = 3 [json_name = "healthProbeTimeout"];
  int32 health_threshold = 4 [json_name = "healthThreshold"];
}

message PubsubSubscription {
  string pubsub_name = 1 [json_name = "pubsubname"];
  string topic = 2 [json_name = "topic"];
  map<string,string> metadata = 3 [json_name = "metadata"];
  PubsubSubscriptionRules rules = 4 [json_name = "rules"];
  string dead_letter_topic = 5 [json_name = "deadLetterTopic"];
  PubsubSubscriptionType type = 6 [json_name = "type"];
}

// PubsubSubscriptionType indicates the type of subscription
enum PubsubSubscriptionType {
  // UNKNOWN is the default value for the subscription type.
  UNKNOWN = 0;
  // Declarative subscription (k8s CRD)
  DECLARATIVE = 1;
  // Programmatically created subscription
  PROGRAMMATIC = 2;
  // Bidirectional Streaming subscription
  STREAMING = 3;
}

message PubsubSubscriptionRules {
  repeated PubsubSubscriptionRule rules = 1;
}

message PubsubSubscriptionRule {
  string match = 1;
  string path = 2;
}

message SetMetadataRequest {
  string key = 1;
  string value = 2;
}
